# linear_regression_001

./: LICENSE  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/features/: insurance_features_v1.csv
data/inference/: predict_data.csv
data/predictions/: predictions.csv  predictions_linear_regression.csv
data/processed/: processed_insurance.csv  test.csv  train.csv
linear_regression_001/: __init__.py
linear_regression_001/data/: DataLoader.py  __init__.py  loader.py  preprocess.py
linear_regression_001/features/: __init__.py  build_features.py
linear_regression_001/models/: __init__.py  evaluate.py  predict.py  train.py
linear_regression_001/models/saved_models/: baseline.pkl  elastic_net.pkl  lasso.pkl  linear_regression.pkl  ridge.pkl
linear_regression_001/utils/: __init__.py  paths.py  regression_tests.py
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
src/config/: logging.yaml  schema.yaml
src/data/: __init__.py  validation.py
src/models/: train.py
src/utils/: __init__.py  logging_utils.py
tests/: test_validation.py
