[tool.poetry]
name = "linear-regression-001"
version = "0.1.0"
description = "End-to-end linear regression example."
authors = ["lokkenchan <lkc562@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
