[tool.poetry]
name = "linear-regression-001"
version = "0.1.0"
description = "End-to-end linear regression example."
authors = ["lokkenchan <lkc562@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.1"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
dagshub = "^0.6.4"
dvc = "^3.66.1"
dvc-s3 = "^3.2.2"
mlflow = "^3.8.1"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
ipykernel = "^7.1.0"
statsmodels = "^0.14.6"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.12"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
